--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,10 @@ dependencies {
 
     implementation 'io.paperdb:paperdb:2.6'
 
+    //Moxy
+    implementation 'com.arello-mobile:moxy:1.5.5'
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.5'
+    implementation 'com.arello-mobile:moxy-android:1.5.5'
+    implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
+
 }
