Add  category news

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.tomer:fadingtextview:2.5'
+    implementation 'com.github.florent37:materialviewpager:1.2.3'
 
     //Floating action button
     implementation 'com.github.clans:fab:1.6.4'
