--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.tomer:fadingtextview:2.5'
     implementation 'com.github.florent37:materialviewpager:1.2.3'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
 
     //Floating action button
     implementation 'com.github.clans:fab:1.6.4'
