--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
 
     implementation 'com.github.curioustechizen.android-ago:library:1.3.4'
     implementation 'com.github.florent37:diagonallayout:1.0.7'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -48,19 +47,12 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
-    //Floating action button
-    implementation 'com.github.clans:fab:1.6.4'
-
-    //Expandable layout
-    implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
-
     //Graph
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
     implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'io.paperdb:paperdb:2.6'
@@ -76,4 +68,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.0'
 
+    //Location
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
+
+    ///CheckPermission
+    implementation 'com.karumi:dexter:5.0.0'
 }
